
\section{CHANGES IN VERSION 1.24.0}{

        \subsection{NEW FEATURES}{

                \itemize{

                        \item \code{strandSpecific} is a new parameter added to \code{interest()} and \code{interest.sequential()}. It indicates that
IntEREst is now strand-aware. All analysis can be run whilst taking into account (or ignoring) the strand specificity of the sequencing reads. 

                }
        }

	\subsection{SIGNIFICANT USER-VISIBLE CHANGES}{

		\itemize{

			\item \code{GenomicFiles::reduceByYield} function is now used instead of 
			\code{BiocParallel::bpiterat} for improved efficiency and readability. 
			This relates to how analysis related to different pieces of the alignment 
			data is distributed over the parallel cores and the results are sumarized.

		}
	}
	\subsection{BUG FIXES}{

      \itemize{

              \item In \code{interest()} and and \code{interest.sequential()} 
              The oredr of the results of the different methods in the result 
              matrix is corrected. Correct running of analyses using multiple 
              methods with a single command is now possible.

      }
 }
}

\section{CHANGES IN VERSION 1.22.0}{

	\subsection{NEW FEATURES}{

		\itemize{
			
			\item \code{method} parameter in \code{interest()} and \code{interest.sequential()} functions now support 
\code{"ExSkip"}. For each exon, the fucntions can now count the number of reads that skip over the exons.

		}
	}

}

\section{CHANGES IN VERSION 1.20.0}{

	\subsection{NEW FEATURES}{

		\itemize{

			\item \code{limitRanges} parameter in \code{interest()} and \code{interest.sequential()} functions allow for targetted analysis. It only loads reads that map to the dfined coordinates.
			
		}
	}

}

\section{CHANGES IN VERSION 1.12.0}{

        \subsection{BUG FIXES}{

                \itemize{

                        \item Replacing \code{class( x ) == "foo"} with \code{is( x , "foo")} .

                }
        }
}
